Name:                   wigner-ville-accelerate
Version:                0.1.0.0
Cabal-version:          >= 1.6
Tested-with:            GHC >= 8.0.1
Build-type:             Simple

Synopsis:               Wigner-ville transform using the Accelerate library
Description:
  Wigner-ville and Pseudo wigner-ville transform algorithm, ispired by "Time-frequency toolbox" 
  and adapted to use with the Accelerate library.

license:             BSD3
license-file:        LICENSE
author:              Rinat Stryungis
maintainer:          lazybonesxp@gmail.com

copyright:           2017 Rinat Stryungis
Maintainer:          Rinat Stryungis <lazybonesxp@gmail.com>
category:            Time-frequency distributions, parallelism
Homepage:            https://github.com/Haskell-mouse/wigner-ville-accelerate
Bug-reports:         https://github.com/Haskell-mouse/wigner-ville-accelerate/issues

Stability:           Experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wigner, Hilbert, WindowFunc
  other-modules:       Wigner', PseudoWigner
  build-depends:       base >= 4.7 && < 5 , accelerate, accelerate-fft
  default-language:    Haskell2010

test-suite wigner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wigner
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wigner
