name:                wigner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wigner#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wigner, RwData, Hilbert
  build-depends:       base >= 4.7 && < 5 , accelerate, accelerate-io , text , vector, accelerate-fft, matrix, accelerate-llvm-native
  default-language:    Haskell2010

executable wigner-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O3 -threaded -rtsopts
  build-depends:       base
                     , wigner , accelerate, vector, accelerate-io, double-conversion, text, accelerate-llvm-native
  default-language:    Haskell2010

test-suite wigner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wigner
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wigner
